--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -492,8 +492,8 @@ main li::before {
 .connect-to-perform {
   background: var(--clr-darkblue);
   border-bottom-left-radius: var(--border-radius);
-  //   box-shadow: -70px 0px 0px 0px var(--clr-green),
-  //     -70px 1px 0px 0px var(--clr-green);
+  box-shadow: -70px 0px 0px 0px var(--clr-green),
+    -70px 1px 0px 0px var(--clr-green);
   margin-left: 2em;
   padding-top: 2em;
   padding-left: 2em;
